Utworzono za pomocą Colaboratory

--- a/generate_random_data.ipynb
+++ b/generate_random_data.ipynb
@@ -21,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -66,8 +66,7 @@
       ],
       "source": [
         "%pip install faker\n",
-        "%pip install pyspark\n",
-        "%pip install delta-spark"
+        "%pip install pyspark"
       ]
     },
     {
@@ -81,7 +80,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "Jj6v8qT19eqb"
       },
@@ -208,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "p_upkcpwOYBL"
       },
@@ -275,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "EJ89tKDMu2sW"
       },
@@ -345,7 +344,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "2cRUVCnVhtAk"
       },
@@ -422,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "iWZNMDvVgq66"
       },
@@ -516,7 +515,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Z15Qonn0hbQf"
       },
@@ -580,7 +579,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -696,7 +695,7 @@
         "id": "F6vKE4nVhPz0",
         "outputId": "ab225e07-7b59-4516-b8ab-05c28eb7a570"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +743,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "ai9Q1QqilJUE",
         "colab": {
@@ -807,7 +806,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -868,7 +867,7 @@
         "8cMXkdRDu3Fi"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyNQZws6QWObB0nWifUJ20NK",
+      "authorship_tag": "ABX9TyO5KplG2kUWlqpXVAYBUiKP",
       "include_colab_link": true
     },
     "kernelspec": {
