Utworzono za pomocą Colaboratory

--- a/generate_random_data.ipynb
+++ b/generate_random_data.ipynb
@@ -66,7 +66,7 @@
       "source": [
         "from pyspark.sql import SparkSession\n",
         "from pyspark.sql.types import StructType, StructField, StringType, DateType, IntegerType, FloatType\n",
-        "from datetime import datetime, date\n",
+        "from datetime import datetime\n",
         "from faker import Faker\n",
         "from faker.providers import BaseProvider\n",
         "from random import choice, uniform, randint, seed\n",
@@ -186,14 +186,14 @@
         "\n",
         "    def subsector(self):\n",
         "        subsectors = [\"Bakery Supplies\", \"Candy & Chocolate\", \"Dessert Mixes\", \"Ice Cream Ingredients\",\n",
-        "                              \"Packaged Sweets\", \"Pastry Ingredients\", \"Sweeteners\", \"Toppings & Decorations\"]\n",
+        "                      \"Packaged Sweets\", \"Pastry Ingredients\", \"Sweeteners\", \"Toppings & Decorations\"]\n",
         "        return self.random_element(subsectors)\n",
         "\n",
         "    def category(self):\n",
-        "        categorys = [\"Cake\", \"Cookie\", \"Chocolate\", \"Pastry\", \"Candy\", \"Dessert\", \"Sweet\", \"Fudge\", \"Treat\", \"Confectionery\",\n",
-        "                       \"Bakery\", \"Pie\", \"Ice Cream\", \"Caramel\", \"Marshmallow\", \"Gumdrop\", \"Lollipop\", \"Truffle\", \"Pudding\",\n",
-        "                       \"Macaron\", \"Cupcake\", \"Brownie\", \"Tart\", \"Donut\", \"Frosting\", \"Creme\", \"Jelly\", \"Syrup\", \"Fruitcake\"]\n",
-        "        return self.random_element(categorys)\n",
+        "        categories = [\"Cake\", \"Cookie\", \"Chocolate\", \"Pastry\", \"Candy\", \"Dessert\", \"Sweet\", \"Fudge\", \"Treat\", \"Confectionery\",\n",
+        "                      \"Bakery\", \"Pie\", \"Ice Cream\", \"Caramel\", \"Marshmallow\", \"Gumdrop\", \"Lollipop\", \"Truffle\", \"Pudding\",\n",
+        "                      \"Macaron\", \"Cupcake\", \"Brownie\", \"Tart\", \"Donut\", \"Frosting\", \"Creme\", \"Jelly\", \"Syrup\", \"Fruitcake\"]\n",
+        "        return self.random_element(categories)\n",
         "\n",
         "    def brand(self):\n",
         "        brands = [\"Zypher\", \"Exquinox\", \"Vintura\", \"Quentro\", \"Travala\", \"Nexxon\", \"Delisio\", \"Zemora\", \"Aurora\", \"Novata\"]\n",
@@ -291,17 +291,6 @@
       "source": [
         "def create_random_product_info() -> dict:\n",
         "\n",
-        "    subsector = choice([\"Bakery Supplies\", \"Candy & Chocolate\", \"Dessert Mixes\", \"Ice Cream Ingredients\",\n",
-        "                              \"Packaged Sweets\", \"Pastry Ingredients\", \"Sweeteners\", \"Toppings & Decorations\"])\n",
-        "\n",
-        "    # Wybierz losową kategorię spośród 30 produktów cukierniczych\n",
-        "    category = choice([\"Cake\", \"Cookie\", \"Chocolate\", \"Pastry\", \"Candy\", \"Dessert\", \"Sweet\", \"Fudge\", \"Treat\", \"Confectionery\",\n",
-        "                       \"Bakery\", \"Pie\", \"Ice Cream\", \"Caramel\", \"Marshmallow\", \"Gumdrop\", \"Lollipop\", \"Truffle\", \"Pudding\",\n",
-        "                       \"Macaron\", \"Cupcake\", \"Brownie\", \"Tart\", \"Donut\", \"Frosting\", \"Creme\", \"Jelly\", \"Syrup\", \"Fruitcake\"])\n",
-        "\n",
-        "    # Wybierz losową nieistniejącą markę spośród 10 marek\n",
-        "    brand = choice([\"Zypher\", \"Exquinox\", \"Vintura\", \"Quentro\", \"Travala\", \"Nexxon\", \"Delisio\", \"Zemora\", \"Aurora\", \"Novata\"])\n",
-        "\n",
         "    return {\n",
         "        \"Product_ID\": str(randint(1000, 9999)),\n",
         "        \"Subsector\": fake.subsector(),\n",
@@ -366,46 +355,7 @@
       },
       "outputs": [],
       "source": [
-        "uuid_list = [fake.uuid4() for _ in range(1_200_000)]\n",
-        "\n",
-        "suplier_mapping = {\n",
-        "    '1': 'Taylor and Sons',\n",
-        "    '2': 'Fischer, Harper and Collins',\n",
-        "    '3': 'Burns, Brewer and Valdez',\n",
-        "    '4': 'Li-Harris',\n",
-        "    '5': 'Thompson-Medina',\n",
-        "    '6': 'Brock Ltd',\n",
-        "    '7': 'Rocha-Harris',\n",
-        "    '8': 'Andrade, Boone and Alvarez',\n",
-        "    '9': 'Hurst Ltd',\n",
-        "    '10': 'Owens-Morrison',\n",
-        "    '11': 'Jones, Bradley and Davis',\n",
-        "    '12': 'Nichols, Mejia and Smith',\n",
-        "    '13': 'Miller, Jones and Moyer',\n",
-        "    '14': 'Good and Sons',\n",
-        "    '15': 'Rodgers-Johnston',\n",
-        "    '16': 'Potts, Allen and Jones',\n",
-        "    '17': 'Franklin, Weber and Parrish',\n",
-        "    '18': 'Carter, Martinez and Sullivan',\n",
-        "    '19': 'Ryan and Sons',\n",
-        "    '20': 'Paul, King and Nichols',\n",
-        "    '21': 'Marshall-Patterson',\n",
-        "    '22': 'Carr-Griffith',\n",
-        "    '23': 'Russell, Newman and Long',\n",
-        "    '24': 'Reed-Long',\n",
-        "    '25': 'Walters, Mcguire and Hampton',\n",
-        "    '26': 'Martinez and Sons',\n",
-        "    '27': 'Whitehead-Berg',\n",
-        "    '28': 'Ross, Hopkins and Thomas',\n",
-        "    '29': 'Garza-Scott',\n",
-        "    '30': 'Williams-Turner',\n",
-        "    '31': 'Taylor-Anderson',\n",
-        "    '32': 'Rivera-Edwards',\n",
-        "    '33': 'Johns Group',\n",
-        "    '34': 'Guzman, Page and Gregory',\n",
-        "    '35': 'Gordon Inc'\n",
-        "}\n",
-        "\n"
+        "uuid_list = [fake.uuid4() for _ in range(1_200_000)]"
       ]
     },
     {
@@ -806,7 +756,7 @@
         "8cMXkdRDu3Fi"
       ],
       "provenance": [],
-      "authorship_tag": "ABX9TyMgUoCy1sKoMpyMZyaBv4Pp",
+      "authorship_tag": "ABX9TyNcgBYnFLQIrR+5OtcHRNpc",
       "include_colab_link": true
     },
     "kernelspec": {
