Utworzono za pomocą Colaboratory

--- a/utilities.ipynb
+++ b/utilities.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN3d07o7mMfQOKbfjMajM/5",
+      "authorship_tag": "ABX9TyPsy2URiJq60NmOR2P4zwqG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "l9yzAbod2FpP"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -147,13 +147,13 @@
       "metadata": {
         "id": "VflkE1e52Sbx"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "# Define Path"
+        "# Define Paths"
       ],
       "metadata": {
         "id": "NezRHDgM2v-h"
@@ -161,7 +161,14 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "eu_mapping_path = '/mapping/eu_mapping.csv'\n",
+        "suplier_mapping_path = '/mapping/suplier_mapping.csv'\n",
+        "financials_path = '/data/financials.csv'\n",
+        "products_path = '/data/products.csv'\n",
+        "supliers_path = '/data/supliers.csv'\n",
+        "transactions_path = '/data/transactions.csv'"
+      ],
       "metadata": {
         "id": "v4QHaKhX2zVQ"
       },
