--- a/utilities.ipynb
+++ b/utilities.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsy2URiJq60NmOR2P4zwqG",
+      "authorship_tag": "ABX9TyNpLZwzuatmQEz69K3d2ELf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oCS7Pyza12Bc",
-        "outputId": "79d589d2-0913-4586-fbd6-fc9b29a30957"
+        "outputId": "1733c990-7689-4803-f57a-4c56c13f11dc"
       },
       "outputs": [
         {
@@ -52,12 +52,12 @@
           "text": [
             "Collecting pyspark\n",
             "  Downloading pyspark-3.5.0.tar.gz (316.9 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m316.9/316.9 MB\u001b[0m \u001b[31m3.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
             "Building wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.5.0-py2.py3-none-any.whl size=317425345 sha256=9bc98106fe7cfb97493dd2c6eaf1159794c5c2d06c9a4a6d854a9743a4362ff5\n",
+            "  Created wheel for pyspark: filename=pyspark-3.5.0-py2.py3-none-any.whl size=317425345 sha256=fed8341fd44f14017ab6da3d75cf6b518a3905bfad10891d865fd9dd118f9563\n",
             "  Stored in directory: /root/.cache/pip/wheels/41/4e/10/c2cf2467f71c678cfc8a6b9ac9241e5e44a01940da8fbb17fc\n",
             "Successfully built pyspark\n",
             "Installing collected packages: pyspark\n",
@@ -88,7 +88,7 @@
       "metadata": {
         "id": "l9yzAbod2FpP"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -108,15 +108,8 @@
         "    StructField(\"Subsector\", StringType(), nullable=True),\n",
         "    StructField(\"Category\", StringType(), nullable=True),\n",
         "    StructField(\"Brand\", StringType(), nullable=True),\n",
-        "    StructField(\"Material_ID\", IntegerType(), nullable=True),\n",
         "    StructField(\"Description\", StringType(), nullable=True),\n",
         "    StructField(\"Supplier_ID\", IntegerType(), nullable=True)\n",
-        "])\n",
-        "\n",
-        "suplier_schema = StructType([\n",
-        "    StructField(\"Supplier_ID\", IntegerType(), True),\n",
-        "    StructField(\"Supplier_Name\", StringType(), True),\n",
-        "    StructField(\"Country_of_Distribution\", StringType(), True),\n",
         "])\n",
         "\n",
         "transaction_schema = StructType([\n",
@@ -139,15 +132,26 @@
         "    StructField(\"Market_Value\", FloatType(), nullable=False)\n",
         "])\n",
         "\n",
-        "eu_countries_schema = StructType([\n",
+        "eu_countries_mapping_schema = StructType([\n",
         "    StructField(\"Country\", StringType(), True),\n",
         "    StructField(\"Country_Code\", StringType(), True)\n",
+        "])\n",
+        "\n",
+        "suplier_mapping_schema = StructType([\n",
+        "    StructField(\"Country\", StringType(), True),\n",
+        "    StructField(\"Country_Code\", StringType(), True)\n",
+        "])\n",
+        "\n",
+        "suplier_mapping_schema = StructType([\n",
+        "    StructField(\"Supplier_ID\", IntegerType(), True),\n",
+        "    StructField(\"Supplier_Name\", StringType(), True),\n",
+        "    StructField(\"Country_of_Distribution\", StringType(), True),\n",
         "])"
       ],
       "metadata": {
         "id": "VflkE1e52Sbx"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -172,7 +176,7 @@
       "metadata": {
         "id": "v4QHaKhX2zVQ"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     }
   ]
